# annomate

./: .gitignore  README.md  start-app.bat  start-app.sh  todo
backend/: app.db  pyproject.toml
backend/app/: main.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/components/: AnnotationManager.tsx  Canvas.tsx  ImageNavigationManager.tsx  ImageNavigator.tsx  LabelPanel.tsx  MainLayout.tsx  Toolbar.tsx
frontend/src/context/: ImageContext.tsx
frontend/src/pages/: Annotate.tsx  Download.tsx  Landing.tsx
