[tool.poetry]
name = "annomate"
version = "0.1.0"
description = ""
authors = ["Art Koci <artkoci@Arts-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.37"
python-multipart = "^0.0.20"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
